WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
61021
valueMissing validity for select elements is lame when selecting a value by a key operation
https://bugs.webkit.org/show_bug.cgi?id=61021
Summary
valueMissing validity for select elements is lame when selecting a value by a...
Kent Tamura
Reported
2011-05-17 21:00:32 PDT
http://code.google.com/p/chromium/issues/detail?id=76257
This doesn't happen on Mac because arrow keys show a popup menu on Mac (ARROW_KEYS_POP_MENU in dom/SelectElement.cpp)
Attachments
Patch
(6.74 KB, patch)
2011-05-17 22:09 PDT
,
Kent Tamura
no flags
Details
Formatted Diff
Diff
Patch 2
(39.52 KB, patch)
2011-05-18 01:05 PDT
,
Kent Tamura
no flags
Details
Formatted Diff
Diff
Patch 3
(7.59 KB, patch)
2011-05-18 01:28 PDT
,
Kent Tamura
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Kent Tamura
Comment 1
2011-05-17 21:08:26 PDT
Oh, I have found a way to reproduce this problem on Mac.
Kent Tamura
Comment 2
2011-05-17 22:09:38 PDT
Created
attachment 93870
[details]
Patch
Hajime Morrita
Comment 3
2011-05-18 00:39:10 PDT
Comment on
attachment 93870
[details]
Patch Code looks fine. Can we test item selections using lookahead-search and accesskey? both reaches setSelectedIndex().
Kent Tamura
Comment 4
2011-05-18 01:05:58 PDT
Created
attachment 93882
[details]
Patch 2 Adding an accesskey test
Kent Tamura
Comment 5
2011-05-18 01:07:49 PDT
(In reply to
comment #3
)
> (From update of
attachment 93870
[details]
) > Code looks fine. Can we test item selections using lookahead-search and accesskey? both reaches setSelectedIndex().
I have added an accesskey test. The previous patch already had a test for lookahead search.
Kent Tamura
Comment 6
2011-05-18 01:28:27 PDT
Created
attachment 93884
[details]
Patch 3 Remove unnecessary change
Hajime Morrita
Comment 7
2011-05-18 01:34:02 PDT
Comment on
attachment 93884
[details]
Patch 3 Kent-san, thank you for adding tests!
Kent Tamura
Comment 8
2011-05-18 01:40:39 PDT
Thank you for reviewing!
WebKit Commit Bot
Comment 9
2011-05-18 02:33:53 PDT
Comment on
attachment 93884
[details]
Patch 3 Clearing flags on attachment: 93884 Committed
r86744
: <
http://trac.webkit.org/changeset/86744
>
WebKit Commit Bot
Comment 10
2011-05-18 02:33:58 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug