2011-05-18  Kent Tamura  <tkent@chromium.org>

Reviewed by Hajime Morita.

        valueMissing validity for <select> is lame when selecting a value by a key operation
        https://bugs.webkit.org/show_bug.cgi?id=61021

        Add test cases for the bug.

        * fast/forms/ValidityState-valueMissing-002-expected.txt:
        * fast/forms/ValidityState-valueMissing-002.html:
2011-05-18  Kent Tamura  <tkent@chromium.org>

        Reviewed by Hajime Morita.

        valueMissing validity for <select> is lame when selecting a value by a key operation
        https://bugs.webkit.org/show_bug.cgi?id=61021

        We missed updating validity in case that SelectElement::defaultEventHandler
        update selections.  So, SelectElement::setSelectedIndex() updates validity.

        * dom/SelectElement.cpp:
        (WebCore::SelectElement::setSelectedIndex): Call SelectElement::updateValidity().
        * html/HTMLSelectElement.cpp:
        (WebCore::HTMLSelectElement::setSelectedIndex):
          Remove unnecessary setNeedsValidityCheck() call.
          SelectElement::setSlectedIndex() calls it.
        (WebCore::HTMLSelectElement::setSelectedIndexByUser): ditto.

Canonical link: https://commits.webkit.org/76389@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@86744 268f45cc-cd09-0410-ab3c-d52691b4dbfc